@@ -28,15 +28,14 @@ import org.openrewrite.text.PlainText;
 import org.openrewrite.text.PlainTextVisitor;
 
 import java.net.URI;
-import java.nio.file.Paths;
-import java.util.Collections;
+import java.nio.file.Path;
 import java.util.List;
-import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptySet;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.openrewrite.test.RewriteTest.toRecipe;
 import static org.openrewrite.test.SourceSpecs.text;
 
@@ -67,7 +66,7 @@ class DeclarativeRecipeTest implements RewriteTest {
               dr.addUninitialized(
                 new ChangeText("3")
               );
-              dr.initialize(List.of(), Map.of());
+              dr.initialize(List.of());
               spec.recipe(dr);
           },
           text("1", "3"),
@@ -96,7 +95,7 @@ class DeclarativeRecipeTest implements RewriteTest {
         dr.addUninitialized(
           new ChangeText("3")
         );
-        dr.initialize(List.of(), Map.of());
+        dr.initialize(List.of());
         assertThat(dr.getDescriptor().getRecipeList())
           .hasSize(3) // precondition + 2 recipes with options
           .flatExtracting(RecipeDescriptor::getOptions)
@@ -183,21 +182,21 @@ class DeclarativeRecipeTest implements RewriteTest {
         rewriteRun(
           spec -> spec.recipeFromYaml(
             """
-            type: specs.openrewrite.org/v1beta/recipe
-            name: org.openrewrite.PreconditionTest
-            description: Test.
-            preconditions:
-              - org.openrewrite.DeclarativePrecondition
-            recipeList:
-              - org.openrewrite.text.ChangeText:
-                 toText: 3
-            ---
-            type: specs.openrewrite.org/v1beta/recipe
-            name: org.openrewrite.DeclarativePrecondition
-            recipeList:
-              - org.openrewrite.text.Find:
-                  find: 1
-            """,
+              type: specs.openrewrite.org/v1beta/recipe
+              name: org.openrewrite.PreconditionTest
+              description: Test.
+              preconditions:
+                - org.openrewrite.DeclarativePrecondition
+              recipeList:
+                - org.openrewrite.text.ChangeText:
+                   toText: 3
+              ---
+              type: specs.openrewrite.org/v1beta/recipe
+              name: org.openrewrite.DeclarativePrecondition
+              recipeList:
+                - org.openrewrite.text.Find:
+                    find: 1
+              """,
             "org.openrewrite.PreconditionTest"
           ),
           text("1", "3"),
@@ -257,7 +256,7 @@ class DeclarativeRecipeTest implements RewriteTest {
               s -> {
                   //noinspection DataFlowIssue
                   assertThat(s.getAfter()).isNotNull();
-                  assertThat(s.getAfter().getSourcePath()).isEqualTo(Paths.get("test.txt"));
+                  assertThat(s.getAfter().getSourcePath()).isEqualTo(Path.of("test.txt"));
               }
             ))
             .expectedCyclesThatMakeChanges(1),
@@ -269,18 +268,18 @@ class DeclarativeRecipeTest implements RewriteTest {
     void scanningPreconditionMet() {
         rewriteRun(
           spec -> spec.recipeFromYaml("""
-              ---
-              type: specs.openrewrite.org/v1beta/recipe
-              name: org.openrewrite.ScanningPreconditionTest
-              description: Test.
-              preconditions:
-                - org.openrewrite.search.RepositoryContainsFile:
-                    filePattern: sam.txt
-              recipeList:
-                - org.openrewrite.text.FindAndReplace:
-                    find: foo
-                    replace: bar
-              """, "org.openrewrite.ScanningPreconditionTest"),
+            ---
+            type: specs.openrewrite.org/v1beta/recipe
+            name: org.openrewrite.ScanningPreconditionTest
+            description: Test.
+            preconditions:
+              - org.openrewrite.search.RepositoryContainsFile:
+                  filePattern: sam.txt
+            recipeList:
+              - org.openrewrite.text.FindAndReplace:
+                  find: foo
+                  replace: bar
+            """, "org.openrewrite.ScanningPreconditionTest"),
           text("sam", spec -> spec.path("sam.txt")),
           text("foo", "bar")
         );
@@ -290,18 +289,18 @@ class DeclarativeRecipeTest implements RewriteTest {
     void scanningPreconditionNotMet() {
         rewriteRun(
           spec -> spec.recipeFromYaml("""
-              ---
-              type: specs.openrewrite.org/v1beta/recipe
-              name: org.openrewrite.ScanningPreconditionTest
-              description: Test.
-              preconditions:
-                - org.openrewrite.search.RepositoryContainsFile:
-                    filePattern: sam.txt
-              recipeList:
-                - org.openrewrite.text.FindAndReplace:
-                    find: foo
-                    replace: bar
-              """, "org.openrewrite.ScanningPreconditionTest"),
+            ---
+            type: specs.openrewrite.org/v1beta/recipe
+            name: org.openrewrite.ScanningPreconditionTest
+            description: Test.
+            preconditions:
+              - org.openrewrite.search.RepositoryContainsFile:
+                  filePattern: sam.txt
+            recipeList:
+              - org.openrewrite.text.FindAndReplace:
+                  find: foo
+                  replace: bar
+            """, "org.openrewrite.ScanningPreconditionTest"),
           text("foo")
         );
     }
@@ -310,24 +309,24 @@ class DeclarativeRecipeTest implements RewriteTest {
     void preconditionOnNestedDeclarative() {
         rewriteRun(
           spec -> spec.recipeFromYaml("""
-              ---
-              type: specs.openrewrite.org/v1beta/recipe
-              name: org.openrewrite.PreconditionOnDeclarative
-              description: Test.
-              preconditions:
-                - org.openrewrite.text.Find:
-                    find: foo
-              recipeList:
-                - org.openrewrite.DeclarativeExample
-              ---
-              type: specs.openrewrite.org/v1beta/recipe
-              name: org.openrewrite.DeclarativeExample
-              description: Test.
-              recipeList:
-                - org.openrewrite.text.FindAndReplace:
-                    find: foo
-                    replace: bar
-              """, "org.openrewrite.PreconditionOnDeclarative"),
+            ---
+            type: specs.openrewrite.org/v1beta/recipe
+            name: org.openrewrite.PreconditionOnDeclarative
+            description: Test.
+            preconditions:
+              - org.openrewrite.text.Find:
+                  find: foo
+            recipeList:
+              - org.openrewrite.DeclarativeExample
+            ---
+            type: specs.openrewrite.org/v1beta/recipe
+            name: org.openrewrite.DeclarativeExample
+            description: Test.
+            recipeList:
+              - org.openrewrite.text.FindAndReplace:
+                  find: foo
+                  replace: bar
+            """, "org.openrewrite.PreconditionOnDeclarative"),
           text("foo", "bar")
         );
     }
@@ -335,9 +334,9 @@ class DeclarativeRecipeTest implements RewriteTest {
     @Test
     void exposesUnderlyingDataTables() {
         DeclarativeRecipe dr = new DeclarativeRecipe("org.openrewrite.DeclarativeDataTable", "declarative with data table",
-          "test", emptySet(), null, URI.create("dummy"), true, Collections.emptyList());
+          "test", emptySet(), null, URI.create("dummy"), true, emptyList());
         dr.addUninitialized(new Find("sam", null, null, null, null, null, null, null));
-        dr.initialize(List.of(), Map.of());
+        dr.initialize(List.of());
         assertThat(dr.getDataTableDescriptors()).anyMatch(it -> "org.openrewrite.table.TextMatches".equals(it.getName()));
     }
 
@@ -433,5 +432,123 @@ class DeclarativeRecipeTest implements RewriteTest {
                 }
             };
         }
+    }
+
+    @Test
+    void selfReferencingRecipeDetectedAsCycle() {
+        // Test that a recipe referencing itself is detected as a cycle
+        DeclarativeRecipe selfReferencing = new DeclarativeRecipe(
+            "org.openrewrite.SelfReferencing",
+            "Self Referencing Recipe",
+            "A recipe that references itself",
+            emptySet(),
+            null,
+            URI.create("test"),
+            false,
+            emptyList()
+        );
+
+        // Add itself as a sub-recipe
+        selfReferencing.addUninitialized("org.openrewrite.SelfReferencing");
+
+        // Initialize should throw RecipeIntrospectionException when cycle is detected
+        assertThatThrownBy(() -> selfReferencing.initialize(List.of(selfReferencing)))
+            .isInstanceOf(RecipeIntrospectionException.class)
+            .hasMessageContaining("creates a cycle")
+            .hasMessageContaining("org.openrewrite.SelfReferencing -> org.openrewrite.SelfReferencing");
+    }
+
+    @Test
+    void mutuallyRecursiveRecipesDetectedAsCycle() {
+        // Test that mutually recursive recipes are detected as a cycle
+        DeclarativeRecipe recipeA = new DeclarativeRecipe(
+            "org.openrewrite.RecipeA",
+            "Recipe A",
+            "Recipe A that references Recipe B",
+            emptySet(),
+            null,
+            URI.create("test"),
+            false,
+            emptyList()
+        );
+
+        DeclarativeRecipe recipeB = new DeclarativeRecipe(
+            "org.openrewrite.RecipeB",
+            "Recipe B",
+            "Recipe B that references Recipe A",
+            emptySet(),
+            null,
+            URI.create("test"),
+            false,
+            emptyList()
+        );
+
+        // A references B
+        recipeA.addUninitialized("org.openrewrite.RecipeB");
+
+        // B references A
+        recipeB.addUninitialized("org.openrewrite.RecipeA");
+
+        // Initialize should throw RecipeIntrospectionException when cycle is detected
+        assertThatThrownBy(() -> recipeA.initialize(List.of(recipeA, recipeB)))
+            .isInstanceOf(RecipeIntrospectionException.class)
+            .hasMessageContaining("creates a cycle")
+            .hasMessageContaining("RecipeA")
+            .hasMessageContaining("RecipeB");
+    }
+
+    @Test
+    void deeperCyclicReferencesDetectedAsCycle() {
+        // Test that deeper cyclic references (A -> B -> C -> A) are detected as a cycle
+        DeclarativeRecipe recipeA = new DeclarativeRecipe(
+            "org.openrewrite.RecipeA",
+            "Recipe A",
+            "Recipe A that references Recipe B",
+            emptySet(),
+            null,
+            URI.create("test"),
+            false,
+            emptyList()
+        );
+
+        DeclarativeRecipe recipeB = new DeclarativeRecipe(
+            "org.openrewrite.RecipeB",
+            "Recipe B",
+            "Recipe B that references Recipe C",
+            emptySet(),
+            null,
+            URI.create("test"),
+            false,
+            emptyList()
+        );
+
+        DeclarativeRecipe recipeC = new DeclarativeRecipe(
+            "org.openrewrite.RecipeC",
+            "Recipe C",
+            "Recipe C that references Recipe A",
+            emptySet(),
+            null,
+            URI.create("test"),
+            false,
+            emptyList()
+        );
+
+        // A references B
+        recipeA.addUninitialized("org.openrewrite.RecipeB");
+
+        // B references C
+        recipeB.addUninitialized("org.openrewrite.RecipeC");
+
+        // C references A (completing the cycle)
+        recipeC.addUninitialized("org.openrewrite.RecipeA");
+
+        // Initialize should throw RecipeIntrospectionException when cycle is detected
+        assertThatThrownBy(() -> recipeA.initialize(List.of(recipeA, recipeB, recipeC)))
+            .isInstanceOf(RecipeIntrospectionException.class)
+            .hasMessageContaining("creates a cycle")
+            // The cycle path should show A -> B -> C -> A
+            .hasMessageContaining("RecipeA")
+            .hasMessageContaining("RecipeB")
+            .hasMessageContaining("RecipeC");
     }
 }
