@@ -21,17 +21,20 @@ import org.junit.jupiter.params.provider.ValueSource;
 import org.openrewrite.*;
 import org.openrewrite.gradle.marker.GradleDependencyConfiguration;
 import org.openrewrite.gradle.marker.GradleProject;
+import org.openrewrite.maven.tree.ResolvedDependency;
 import org.openrewrite.properties.PropertiesParser;
 import org.openrewrite.test.RecipeSpec;
 import org.openrewrite.test.RewriteTest;
 import org.openrewrite.text.PlainTextParser;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.Optional;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.InstanceOfAssertFactories.list;
+import static org.assertj.core.api.InstanceOfAssertFactories.type;
 import static org.openrewrite.gradle.Assertions.*;
 import static org.openrewrite.gradle.toolingapi.Assertions.withToolingApi;
 import static org.openrewrite.properties.Assertions.properties;
@@ -53,11 +56,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 compileOnly 'com.google.guava:guava:29.0-jre'
                 runtimeOnly ('com.google.guava:guava:29.0-jre')
@@ -67,11 +70,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 compileOnly 'com.google.guava:guava:30.1.1-jre'
                 runtimeOnly ('com.google.guava:guava:30.1.1-jre')
@@ -111,7 +114,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1'
               }
@@ -119,7 +122,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.27'
               }
@@ -139,11 +142,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 testImplementation("org.mockito:mockito-junit-jupiter:3.12.4")
               }
@@ -152,11 +155,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 testImplementation("org.mockito:mockito-junit-jupiter:4.11.0")
               }
@@ -191,13 +194,13 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               def guavaVersion = '29.0-jre'
               def otherVersion = "latest.release"
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:$guavaVersion")
                 implementation "com.fasterxml.jackson.core:jackson-databind:$otherVersion"
@@ -207,13 +210,13 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               def guavaVersion = '30.1.1-jre'
               def otherVersion = "latest.release"
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:$guavaVersion")
                 implementation "com.fasterxml.jackson.core:jackson-databind:$otherVersion"
@@ -233,12 +236,12 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               def springBootVersion = '3.1.5'
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("org.springframework.boot:spring-boot:$springBootVersion")
               }
@@ -260,7 +263,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               dependencies {
                 implementation project(":foo:bar:baz:qux:quux")
               }
@@ -292,11 +295,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation(
                   'com.google.guava:guava-gwt:29.0-jre',
@@ -307,11 +310,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation(
                   'com.google.guava:guava-gwt:29.0-jre',
@@ -330,12 +333,12 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               def guavaVersion = '29.0-jre'
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation group: "com.google.guava", name: "guava", version: guavaVersion
               }
@@ -344,12 +347,12 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               def guavaVersion = '30.1.1-jre'
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation group: "com.google.guava", name: "guava", version: guavaVersion
               }
@@ -366,11 +369,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation (group: "com.google.guava", name: "guava", version: '29.0-jre')
               }
@@ -379,11 +382,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation (group: "com.google.guava", name: "guava", version: '30.1.1-jre')
               }
@@ -397,36 +400,36 @@ class UpgradeDependencyVersionTest implements RewriteTest {
     void mapNotationGStringInterpolation(String stringInterpolationReference) {
         rewriteRun(
           buildGradle(
-            String.format("""
+                  """
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               def guavaVersion = '29.0-jre'
-              
+
               dependencies {
                 implementation(group: "com.google.guava", name: "guava", version: "%s")
               }
-              """, stringInterpolationReference),
-            String.format("""
+              """.formatted(stringInterpolationReference),
+                  """
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               def guavaVersion = '30.1.1-jre'
-              
+
               dependencies {
                 implementation(group: "com.google.guava", name: "guava", version: "%s")
               }
-              """, stringInterpolationReference)
+              """.formatted(stringInterpolationReference)
           )
         );
     }
@@ -436,36 +439,36 @@ class UpgradeDependencyVersionTest implements RewriteTest {
     void mapNotationKStringTemplateInterpolation(String stringInterpolationReference) {
         rewriteRun(
           buildGradleKts(
-            String.format("""
+                  """
               plugins {
                 `java-library`
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               val guavaVersion = "29.0-jre"
-              
+
               dependencies {
                 implementation(group = "com.google.guava", name = "guava", version = "%s")
               }
-              """, stringInterpolationReference),
-            String.format("""
+              """.formatted(stringInterpolationReference),
+                  """
               plugins {
                 `java-library`
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               val guavaVersion = "30.1.1-jre"
-              
+
               dependencies {
                 implementation(group = "com.google.guava", name = "guava", version = "%s")
               }
-              """, stringInterpolationReference)
+              """.formatted(stringInterpolationReference)
           )
         );
     }
@@ -479,11 +482,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation platform("com.google.guava:guava:29.0-jre")
               }
@@ -492,11 +495,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation platform("com.google.guava:guava:30.1.1-jre")
               }
@@ -513,15 +516,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id "java"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               ext {
                   guavaVersion2 = "29.0-jre"
               }
-              
+
               dependencies {
                   implementation "com.google.guava:guava:${guavaVersion2}"
               }
@@ -530,15 +533,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id "java"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               ext {
                   guavaVersion2 = "30.1.1-jre"
               }
-              
+
               dependencies {
                   implementation "com.google.guava:guava:${guavaVersion2}"
               }
@@ -576,7 +579,20 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                       classpath("com.google.guava:guava:${guavaVersion}")
                   }
               }
-              """
+              """,
+            spec -> spec.afterRecipe(cu ->
+                //noinspection DataFlowIssue
+                assertThat(cu.getMarkers().findFirst(GradleProject.class))
+                  .get()
+                  .asInstanceOf(type(GradleProject.class))
+                  .extracting(gp -> gp.getBuildscript().getConfigurations())
+                  .asInstanceOf(list(GradleDependencyConfiguration.class))
+                  .singleElement()
+                  .extracting(conf -> conf.findResolvedDependency("com.google.guava", "guava"))
+                  .isNotNull()
+                  .extracting(ResolvedDependency::getVersion)
+                  .as("GradleProject model should reflect the updated guava version")
+                  .isEqualTo("30.1.1-jre"))
           )
         );
     }
@@ -598,14 +614,14 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                       guavaVersion = "29.0-jre"
                   }
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               subprojects {
                   apply plugin: 'java'
-              
+
                   repositories {
                       mavenCentral()
                   }
@@ -617,14 +633,14 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                       guavaVersion = "30.1.1-jre"
                   }
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               subprojects {
                   apply plugin: 'java'
-              
+
                   repositories {
                       mavenCentral()
                   }
@@ -665,19 +681,19 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                       classpath("com.google.guava:guava:${guavaVersion}")
                   }
               }
-              
+
               plugins {
                   id "java"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               ext {
                   guavaVersion2 = "29.0-jre"
               }
-              
+
               dependencies {
                   implementation "com.google.guava:guava:${guavaVersion2}"
               }
@@ -694,19 +710,19 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                       classpath("com.google.guava:guava:${guavaVersion}")
                   }
               }
-              
+
               plugins {
                   id "java"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               ext {
                   guavaVersion2 = "30.1.1-jre"
               }
-              
+
               dependencies {
                   implementation "com.google.guava:guava:${guavaVersion2}"
               }
@@ -724,15 +740,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id "java"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               ext {
                   guavaVersion = "29.0-jre"
               }
-              
+
               def guavaVersion2 = "29.0-jre"
               dependencies {
                   implementation("com.google.guava:guava:29.0-jre")
@@ -745,15 +761,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id "java"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               ext {
                   guavaVersion = "30.1.1-jre"
               }
-              
+
               def guavaVersion2 = "30.1.1-jre"
               dependencies {
                   implementation("com.google.guava:guava:30.1.1-jre")
@@ -775,11 +791,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation 'com.google.guava:guava:29.0-jre'
               }
@@ -794,11 +810,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   plugins {
                     id 'java-library'
                   }
-                  
+
                   repositories {
                     mavenCentral()
                   }
-                  
+
                   dependencies {
                     implementation 'com.google.guava:guava:%s'
                   }
@@ -808,8 +824,17 @@ class UpgradeDependencyVersionTest implements RewriteTest {
         );
     }
 
-    @Test
-    void versionInPropertiesFile() {
+    @ParameterizedTest
+    @ValueSource(strings = {
+      "$guavaVersion",
+      "${guavaVersion}",
+      "${property('guavaVersion')}",
+      "${project.property('guavaVersion')}",
+      "${findProperty('guavaVersion')}",
+      "${project.findProperty('guavaVersion')}",
+      "${project.properties['guavaVersion']}"
+    })
+    void versionInPropertiesFile(String propertyNotation) {
         rewriteRun(
           properties(
             """
@@ -825,15 +850,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
-                implementation ("com.google.guava:guava:$guavaVersion")
+                implementation ("com.google.guava:guava:%s")
               }
-              """
+              """.formatted(propertyNotation)
           )
         );
     }
@@ -852,11 +877,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:30.1.1-jre")
               }
@@ -891,11 +916,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:$guavaVersion")
               }
@@ -907,11 +932,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:$guavaVersion")
               }
@@ -938,18 +963,18 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                       mavenCentral()
               }
-              
+
               subprojects {
                   repositories {
                       mavenCentral()
                   }
-              
+
                   apply plugin: "java-library"
-              
+
                   dependencies {
                     implementation ("com.google.guava:guava:$guavaVersion")
                   }
@@ -968,7 +993,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
@@ -995,7 +1020,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
@@ -1013,11 +1038,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:$guavaVersion")
               }
@@ -1035,24 +1060,24 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               ext {
                 guavaVersion = "29.0-jre"
               }
-              
+
               repositories {
                 mavenCentral()
               }
               """,
-              """              
+              """
               plugins {
                 id 'java-library'
               }
-              
+
               ext {
                 guavaVersion = "30.1.1-jre"
               }
-              
+
               repositories {
                 mavenCentral()
               }
@@ -1070,11 +1095,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation "com.google.guava:guava:${guavaVersion}"
               }
@@ -1101,11 +1126,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                 implementation ("com.google.guava:guava:$guavaVersion")
               }
@@ -1115,8 +1140,21 @@ class UpgradeDependencyVersionTest implements RewriteTest {
         );
     }
 
-    @Test
-    void mapNotationVariableInPropertiesFile() {
+    @ParameterizedTest
+    @ValueSource(strings = {
+      "guavaVersion",
+      "\"$guavaVersion\"",
+      "\"${guavaVersion}\"",
+      "property('guavaVersion')",
+      "\"${property('guavaVersion')}\"",
+      "\"${project.property('guavaVersion')}\"",
+      "findProperty('guavaVersion')",
+      "\"${findProperty('guavaVersion')}\"",
+      "\"${project.findProperty('guavaVersion')}\"",
+      "project.properties['guavaVersion']",
+      "\"${project.properties['guavaVersion']}\""
+    })
+    void mapNotationVariableInPropertiesFile(String propertyNotation) {
         rewriteRun(
           properties(
             """
@@ -1132,15 +1170,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
-                implementation group: "com.google.guava", name: "guava", version: guavaVersion
+                implementation group: "com.google.guava", name: "guava", version: %s
               }
-              """
+              """.formatted(propertyNotation)
           )
         );
     }
@@ -1162,11 +1200,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation group: "com.google.guava", name: "guava", version: "${guavaVersion}"
               }
@@ -1195,11 +1233,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id 'java'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation("org.springframework.boot:spring-boot-starter-actuator:${springBootVersion}")
                   implementation("org.springframework.security:spring-security-oauth2-core:${springSecurityVersion}")
@@ -1218,11 +1256,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id 'java'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation("org.projectlombok:lombok:latest.release")
                   testImplementation("org.projectlombok:lombok:latest.integration")
@@ -1241,11 +1279,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation 'com.google.guava:guava:29.0-jre'
               }
@@ -1263,11 +1301,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   constraints {
                       implementation("com.google.guava:guava:28.0-jre")
@@ -1289,11 +1327,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   id 'java'
                   id "org.hidetake.swagger.generator" version "2.18.2"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   swaggerCodegen "org.openapitools:openapi-generator-cli:5.2.0"
               }
@@ -1303,11 +1341,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   id 'java'
                   id "org.hidetake.swagger.generator" version "2.18.2"
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   swaggerCodegen "org.openapitools:openapi-generator-cli:5.2.1"
               }
@@ -1325,11 +1363,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation(gradleApi())
                 jar {
@@ -1348,14 +1386,8 @@ class UpgradeDependencyVersionTest implements RewriteTest {
         UpgradeDependencyVersion guava = new UpgradeDependencyVersion("com.google.guava", "guava", "30.x", "-jre");
         TreeVisitor<?, ExecutionContext> visitor = guava.getVisitor();
 
-        SourceFile sourceFile = PlainTextParser.builder().build().parse("not a gradle file").findFirst().orElseThrow().withSourcePath(Paths.get("not-a-gradle-file.txt"));
+        SourceFile sourceFile = PlainTextParser.builder().build().parse("not a gradle file").findFirst().orElseThrow().withSourcePath(Path.of("not-a-gradle-file.txt"));
         assertThat(visitor.isAcceptable(sourceFile, new InMemoryExecutionContext())).isFalse();
-
-        sourceFile = PlainTextParser.builder().build().parse("empty=").findFirst().orElseThrow().withSourcePath(Paths.get("gradle.lockfile"));
-        assertThat(visitor.isAcceptable(sourceFile, new InMemoryExecutionContext())).isTrue();
-
-        sourceFile = PlainTextParser.builder().build().parse("empty=").findFirst().orElseThrow().withSourcePath(Paths.get("module/gradle.lockfile"));
-        assertThat(visitor.isAcceptable(sourceFile, new InMemoryExecutionContext())).isTrue();
 
         sourceFile = PropertiesParser.builder().build().parse("guavaVersion=29.0-jre").findFirst().orElseThrow();
         assertThat(visitor.isAcceptable(sourceFile, new InMemoryExecutionContext())).isTrue();
@@ -1371,11 +1403,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation('com.google.guava:guava:29.0-jre')
               }
@@ -1384,11 +1416,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation('com.google.guava:guava:32.1.1-jre')
               }
@@ -1407,11 +1439,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation('com.google.guava:guava:29.0-android')
               }
@@ -1420,11 +1452,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 implementation('com.google.guava:guava:32.1.1-android')
               }
@@ -1442,11 +1474,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   id "java-library"
                   id 'jvm-test-suite'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               testing {
                   suites {
                       test {
@@ -1462,11 +1494,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   id "java-library"
                   id 'jvm-test-suite'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               testing {
                   suites {
                       test {
@@ -1491,11 +1523,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation 'io.vertx:vertx-core:3.9.8'
               }
@@ -1504,11 +1536,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id 'java-library'
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation 'io.vertx:vertx-core:5.0.1'
               }
@@ -1531,7 +1563,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                 // Check that netty-codec is NOT listed amongst the dependencies as it is not a dependency of vertx-core 5.0.1
                 assertThat(compileClasspath.getResolved())
                   .as("GradleProject resolved dependencies should NOT contain netty-codec after upgrade to vertx-core 5.0.1")
-                  .noneMatch(dep -> dep.getGroupId().equals("io.netty") && dep.getArtifactId().equals("netty-codec"));
+                  .noneMatch(dep -> "io.netty".equals(dep.getGroupId()) && "netty-codec".equals(dep.getArtifactId()));
             })
           )
         );
@@ -1588,11 +1620,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               version='ORC-246-1-SNAPSHOT'
               dependencies {
                 implementation "com.veon.eurasia.oraculum:jira-api:$version"
@@ -1610,7 +1642,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               dependencies {
                 implementation "com.google.guava:guava:29.0-jre"
               }
@@ -1619,7 +1651,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               dependencies {
                 /*~~(com.google.guava:guava failed. Unable to download metadata.)~~>*/implementation "com.google.guava:guava:29.0-jre"
               }
@@ -1636,11 +1668,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation("com.google.guava:guava:29.0-jre")
               }
@@ -1649,11 +1681,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation("com.google.guava:guava:30.1.1-jre")
               }
@@ -1670,11 +1702,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation(group = "com.google.guava", name = "guava", version = "29.0-jre")
               }
@@ -1683,11 +1715,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   implementation(group = "com.google.guava", name = "guava", version = "30.1.1-jre")
               }
@@ -1704,11 +1736,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   val guavaVersion = "29.0-jre"
                   implementation(group = "com.google.guava", name = "guava", version = guavaVersion)
@@ -1718,11 +1750,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   val guavaVersion = "30.1.1-jre"
                   implementation(group = "com.google.guava", name = "guava", version = guavaVersion)
@@ -1740,11 +1772,11 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   val guavaVersion = "29.0-jre"
                   implementation("com.google.guava:guava:${guavaVersion}")
@@ -1754,394 +1786,16 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   `java-library`
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               dependencies {
                   val guavaVersion = "30.1.1-jre"
                   implementation("com.google.guava:guava:${guavaVersion}")
               }
               """
-          )
-        );
-    }
-
-    @Test
-    void lockFileGetsUpdated() {
-        rewriteRun(
-          spec -> spec.recipe(new UpgradeDependencyVersion("org.apache.tomcat.embed", "*", "10.0.27", null)),
-          //language=groovy
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1'
-              }
-              """,
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.27'
-              }
-              """
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """
-          )
-        );
-    }
-
-    @Test
-    void multimoduleProjectLockFile() {
-        rewriteRun(spec ->
-            spec.recipe(new UpgradeDependencyVersion("org.apache.tomcat.embed", "*", "10.0.27", null)),
-          settingsGradle(
-            """
-              rootProject.name = 'my-project'
-              include("moduleA")
-              include("moduleB")
-              include("moduleC")
-              """
-          ),
-          buildGradle(
-            """
-              """
-          ),
-          lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              empty=
-              """,
-            spec -> spec.path("gradle.lockfile")
-          ),
-          //language=groovy
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1'
-              }
-              """,
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.27'
-              }
-              """,
-            spec -> spec.path("moduleA/build.gradle")
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            spec -> spec.path("moduleA/gradle.lockfile")
-          ),
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'com.fasterxml.jackson.core:jackson-core:2.15.4'
-                  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.4'
-                  implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.4'
-              }
-              """,
-            spec -> spec.path("moduleB/build.gradle")
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.fasterxml.jackson.core:jackson-annotations:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-core:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-databind:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson:jackson-bom:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            spec -> spec.path("moduleB/gradle.lockfile")
-          ),
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat:tomcat-annotations-api:10.0.0-M1'
-              }
-              """,
-            spec -> spec.path("moduleC/build.gradle")
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat:tomcat-annotations-api:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            spec -> spec.path("moduleC/gradle.lockfile")
-          )
-        );
-    }
-
-
-    @Test
-    void bomGetsUpdatedInLockFile() {
-        rewriteRun(
-          spec -> spec.recipe(new UpgradeDependencyVersion("io.pivotal.cfenv", "java-cfenv-boot", "3.4.0", null)),
-          //language=groovy
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation "io.pivotal.cfenv:java-cfenv-boot:3.3.0"
-              }
-              """,
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation "io.pivotal.cfenv:java-cfenv-boot:3.4.0"
-              }
-              """
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.cedarsoftware:java-util:2.17.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.cedarsoftware:json-io:4.30.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-commons:1.13.6=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-observation:1.13.6=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.pivotal.cfenv:java-cfenv-boot:3.3.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.pivotal.cfenv:java-cfenv-jdbc:3.3.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.pivotal.cfenv:java-cfenv:3.3.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework.boot:spring-boot-dependencies:3.3.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework.boot:spring-boot:3.3.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-aop:6.1.14=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-beans:6.1.14=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-context:6.1.14=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-core:6.1.14=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-expression:6.1.14=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-jcl:6.1.14=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.cedarsoftware:java-util:3.2.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.cedarsoftware:json-io:4.51.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-commons:1.14.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-observation:1.14.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.pivotal.cfenv:java-cfenv-boot:3.4.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.pivotal.cfenv:java-cfenv-jdbc:3.4.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              io.pivotal.cfenv:java-cfenv:3.4.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework.boot:spring-boot-dependencies:3.4.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework.boot:spring-boot:3.4.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-aop:6.2.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-beans:6.2.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-context:6.2.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-core:6.2.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-expression:6.2.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.springframework:spring-jcl:6.2.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """
-          )
-        );
-    }
-
-    @Test
-    void jacksonBomGetsUpdatedInLockFile() {
-        rewriteRun(
-          spec -> spec.recipe(new UpgradeDependencyVersion("com.fasterxml*", "jackson-core", "2.15.4", null)),
-          //language=groovy
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'com.fasterxml.jackson.core:jackson-core:2.15.3'
-                  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.3'
-                  implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
-              }
-              """,
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'com.fasterxml.jackson.core:jackson-core:2.15.4'
-                  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.15.3'
-                  implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
-              }
-              """
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.fasterxml.jackson.core:jackson-annotations:2.15.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-core:2.15.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-databind:2.15.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson:jackson-bom:2.15.3=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.fasterxml.jackson.core:jackson-annotations:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-core:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-databind:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson:jackson-bom:2.15.4=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """
-          )
-        );
-    }
-
-    @Test
-    void multiProject() {
-        rewriteRun(
-          spec -> spec.recipe(new UpgradeDependencyVersion("org.apache.tomcat.embed", "*", "10.0.27", null)),
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1'
-              }
-              """,
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.27'
-              }
-              """,
-            spec -> spec.path("moduleA/build.gradle")
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            spec -> spec.path("moduleA/gradle.lockfile")
-          ),
-          settingsGradle(
-            """
-              rootProject.name = 'moduleB'
-              include("moduleC")
-              """,
-            spec -> spec.path("moduleB/settings.gradle")
-          ),
-          buildGradle(
-            """
-              """,
-            spec -> spec.path("moduleB/build.gradle")
-          ),
-          lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              empty=
-              """,
-            spec -> spec.path("moduleB/gradle.lockfile")
-          ),
-          //language=groovy
-          buildGradle(
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1'
-              }
-              """,
-            """
-              plugins { id 'java' }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.0.27'
-              }
-              """,
-            spec -> spec.path("moduleB/moduleC/build.gradle")
-          ), lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.0-M1=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              org.apache.tomcat.embed:tomcat-embed-core:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.apache.tomcat:tomcat-annotations-api:10.0.27=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            spec -> spec.path("moduleB/moduleC/gradle.lockfile")
           )
         );
     }
@@ -2154,16 +1808,16 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 compileOnly 'com.google.guava:guava:29.0-jre'
                 runtimeOnly ('com.google.guava:guava:29.0-jre')
               }
-              
+
               task executeShellCommands {
                   doLast {
                       exec {
@@ -2179,16 +1833,16 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                 id 'java-library'
               }
-              
+
               repositories {
                 mavenCentral()
               }
-              
+
               dependencies {
                 compileOnly 'com.google.guava:guava:30.1.1-jre'
                 runtimeOnly ('com.google.guava:guava:30.1.1-jre')
               }
-              
+
               task executeShellCommands {
                   doLast {
                       exec {
@@ -2222,15 +1876,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                       guavaVersion = "29.0-jre"
                   }
               }
-              
+
               plugins {
                   id("java")
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               apply from: 'dependencies.gradle'
               """,
             """
@@ -2239,15 +1893,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                       guavaVersion = "30.1.1-jre"
                   }
               }
-              
+
               plugins {
                   id("java")
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               apply from: 'dependencies.gradle'
               """
           )
@@ -2272,15 +1926,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                       guavaVersion = "29.0-jre"
                   }
               }
-              
+
               plugins {
                   id("java")
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               apply from: 'dependencies.gradle'
               """,
             """
@@ -2289,15 +1943,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                       guavaVersion = "30.1.1-jre"
                   }
               }
-              
+
               plugins {
                   id("java")
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               apply from: 'dependencies.gradle'
               """
           )
@@ -2322,23 +1976,29 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                       guavaVersion = "29.0-jre"
                   }
               }
-              
+
               plugins {
                   id("java")
               }
-              
+
               repositories {
                   mavenCentral()
               }
-              
+
               apply from: 'dependencies.gradle'
               """
           )
         );
     }
 
-    @Test
-    void upgradeVersionInSettingsGradleExt() {
+    @ParameterizedTest
+    @ValueSource(strings = {
+      "\"com.fasterxml.jackson.core:jackson-databind:${gradle.jackson}\"",
+      "group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: gradle.jackson",
+      "group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: \"$gradle.jackson\"",
+      "group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: \"${gradle.jackson}\""
+    })
+    void upgradeVersionInSettingsGradleExt(String dependencyNotation) {
         rewriteRun(
           spec -> spec.recipe(new UpgradeDependencyVersion("com.fasterxml.jackson.core", "jackson-databind", "2.15.0", null)),
           settingsGradle(
@@ -2358,15 +2018,15 @@ class UpgradeDependencyVersionTest implements RewriteTest {
               plugins {
                   id 'java-library'
               }
-    
+
               repositories {
                   mavenCentral()
               }
-    
+
               dependencies {
-                  implementation "com.fasterxml.jackson.core:jackson-databind:${gradle.jackson}"
+                  implementation %s
               }
-              """
+              """.formatted(dependencyNotation)
           )
         );
     }
@@ -2381,7 +2041,7 @@ class UpgradeDependencyVersionTest implements RewriteTest {
             """
               plugins { id 'java' }
               repositories { mavenCentral() }
-              
+
               dependencies {
                   implementation 'org.apache.tomcat.embed:tomcat-embed-core:10.1.43'
               }
@@ -2407,6 +2067,84 @@ class UpgradeDependencyVersionTest implements RewriteTest {
                   }
               }
               """
+          )
+        );
+    }
+
+    @Test
+    void doesNotDowngradeRegularDependencyVersionInSettingsGradleExt() {
+        rewriteRun(
+          spec -> spec.recipe(new UpgradeDependencyVersion("com.fasterxml.jackson.core", "jackson-databind", "2.13.2", null)),
+          settingsGradle(
+            """
+              gradle.ext {
+                  jackson = '2.13.3'
+              }
+              """
+          ),
+          buildGradle(
+            """
+              plugins {
+                  id 'java-library'
+              }
+    
+              repositories {
+                  mavenCentral()
+              }
+    
+              dependencies {
+                  implementation "com.fasterxml.jackson.core:jackson-databind:${gradle.jackson}"
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void doesNotDowngradeBuildscriptDependencyVersionInSettingsGradleExt() {
+        rewriteRun(
+          spec -> spec.recipe(new UpgradeDependencyVersion("com.fasterxml.jackson.core", "jackson-databind", "2.13.2", null)),
+          settingsGradle(
+            """
+              gradle.ext {
+                  jackson = '2.13.3'
+              }
+              """
+          ),
+          buildGradle(
+            """
+              buildscript {
+                  repositories {
+                      mavenCentral()
+                  }
+                  dependencies {
+                      classpath "com.fasterxml.jackson.core:jackson-databind:${gradle.jackson}"
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void upgradeAnnotationProcessors() {
+        rewriteRun(
+          spec -> spec.recipe(new UpgradeDependencyVersion("org.mapstruct", "mapstruct*", "1.6.x", null)),
+          buildGradle(
+            //language=groovy
+            """
+              plugins { id 'java' }
+              repositories { mavenCentral() }
+              dependencies {
+                  implementation 'org.mapstruct:mapstruct:1.4.1.Final'
+                  annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.1.Final'
+              }
+              """,
+            spec -> spec.after(actual ->
+              assertThat(actual)
+                .doesNotContain("1.4.1.Final")
+                .containsPattern("1.6.\\d+(.\\d+)?")
+                .actual())
           )
         );
     }
